feat: migrate backend to Applicant B2B domain